# numerical_methods

./: CMakeLists.txt  a.out  main.cpp
backupImplementations/: a.out  main.cpp
include/IPV/: adams_bashforth_method_second_order.hpp  adams_bashforth_method_third_order.hpp  euler_method_explict.hpp  euler_method_implict.hpp  ipv.hpp  range_kutta_method_fourth_order.hpp  range_kutta_method_second_order.hpp  range_kutta_method_third_order.hpp
include/derivate/: derivate.hpp  first_derivate_backward_approach.hpp  first_derivate_central_approach.hpp  first_derivate_forward_approach.hpp  second_derivate_backward_approach.hpp  second_derivate_central_approach.hpp  second_derivate_forward_approach.hpp  (+1 more)
integral/: main.cpp
src/integral/: CMakeLists.txt  first_degree_integral_newtoncotes.cpp  first_degree_integral_open_newtoncotes.cpp  integral.cpp  integral_gauss.cpp  integral_special.cpp  integral_special_double_exponential_newton_cotes.cpp  integral_special_simple_exponential_newton_cotes.cpp  second_degree_integral_gausschebyshev.cpp  second_degree_integral_gausshermite.cpp  second_degree_integral_gausslaguerre.cpp  second_degree_integral_gausslegendre.cpp  second_degree_integral_open_milnerule.cpp  second_degree_integral_simpson_onethird.cpp  third_degree_integral_gausschebyshev.cpp  third_degree_integral_gausshermite.cpp  third_degree_integral_gausslaguerre.cpp  third_degree_integral_gausslegendre.cpp  third_degree_integral_open_newtoncotes.cpp  third_degree_integral_simpson_threeEighths.cpp
types/: derivate_methods_parameters.hpp  methods_parameters.hpp
(+57 files in other folders)
